k8s/apps/mahiron/bbc/resources/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment

spec:
  replicas: 1
  selector:
    matchLabels:
      app: default
  template:
    metadata:
      labels:
        app: default
    spec:
      containers:
        - name: app
          image: ghcr.io/starrybluesky/mahiron-custom:master@sha256:fd9b2d7392b069ff6d666db3584c3ec6b7be2cb160a9da97bce1e37919186667
          ports:
            - containerPort: 40772
          volumeMounts:
            - name: data
              mountPath: /var/db/mahiron
            - name: config
              mountPath: /etc/mahiron
              readOnly: true
            - name: dev-px4video0
              mountPath: /dev/px4video0
            - name: dev-px4video1
              mountPath: /dev/px4video1
            - name: dev-px4video2
              mountPath: /dev/px4video2
            - name: dev-px4video3
              mountPath: /dev/px4video3
          resources:
            limits:
              memory: 2Gi
          securityContext:
            capabilities:
              add:
                - SYS_ADMIN
                - SYS_NICE
            privileged: true
      volumes:
        - name: data
          hostPath:
            path: /mnt/local/mahiron/data
            type: DirectoryOrCreate
        - name: config
          hostPath:
            path: /mnt/local/mahiron/config
            type: Directory
        - name: dev-px4video0
          hostPath:
            path: /dev/px4video0
            type: CharDevice
        - name: dev-px4video1
          hostPath:
            path: /dev/px4video1
            type: CharDevice
        - name: dev-px4video2
          hostPath:
            path: /dev/px4video2
            type: CharDevice
        - name: dev-px4video3
          hostPath:
            path: /dev/px4video3
            type: CharDevice
      restartPolicy: Always
      imagePullSecrets:
        - name: ghcr-io-credentials
      securityContext:
        seccompProfile:
          type: RuntimeDefault
