k8s/apps/mahiron/bbc/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app

spec:
  selector:
    app: default
  type: NodePort
  ports:
    - name: default
      port: 40772
      targetPort: 40772
      nodePort: 30772
      protocol: TCP
