k8s/apps/mahiron/bbc/resources/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tailscale
  annotations:
    tailscale.com/experimental-forward-cluster-traffic-via-ingress: "true"

spec:
  defaultBackend:
    service:
      name: app
      port:
        name: 40772
  ingressClassName: tailscale
